Calculate deltas for each table even if not viewing the table.
Fix up help and docs for -r option to include argument.

--- a/dnstop.8
+++ b/dnstop.8
@@ -48,7 +48,7 @@ BPF filter expression
 ignore select addresses
 .It Fl p
 Do not put the interface into promiscuous mode.
-.It Fl r
+.It Fl r Ar seconds
 Redraw interval (seconds).
 .It Fl l Ar level
 keep counts on names up to
