--- a/CHANGES
+++ b/CHANGES
@@ -1,3 +1,11 @@
+2023/03/01 Dan Dargel
+
+    Display refresh interval.
+
+    Calculate deltas for each table even if not viewing the table.
+
+    Add delta counters to qtype, opcode, rcode, and qclass tables.
+
 2023/02/27 Dan Dargel
 
     Added q as another quit key.
