--- a/dnstop.8
+++ b/dnstop.8
@@ -166,6 +166,16 @@ show sources + 7th level query names
 show sources + 8th level query names
 .It (
 show sources + 9th level query names
+.It e
+toggle display of delta
+.It C
+sort by count (default)
+.It D
+sort by delta
+.It A
+sort by average delta
+.It M
+sort by maximum delta
 .It ^R
 reset the counters
 .It ^X/q
