--- a/dnstop.8
+++ b/dnstop.8
@@ -233,6 +233,7 @@ are taken from the queries.
 .It Pa John Morrissey <jwm@horde.net>
 .It Pa Florian Forster <octo@verplant.org>
 .It Pa Dave Plonka <plonka@cs.wisc.edu>
+.It Pa Dan Dargel <@uwplatt.edu>
 .It Pa http://dnstop.measurement-factory.com/
 .El
 .Sh BUGS
