--- a/dnstop.8
+++ b/dnstop.8
@@ -100,8 +100,8 @@ to count only message of type ANY.
 .It Fl n Ar name
 Only count messages within the domain
 .Ar name
-.It Fl N
-Non-interactive mode with report.
+.It Fl N Ar num
+Non-interactive mode with report of num records (0=all).
 .It Fl P
 Print "progress" messages on stderr when in non-interactive mode.
 .It Fl B Ar buckets
