--- a/CHANGES
+++ b/CHANGES
@@ -2,6 +2,7 @@
 
     Add number of records to -N option.
     Increase max width of non-interactive mode.
+    Decode GRE tunneled DNS if bpf filter includes it.
 
 2023/03/05 Dan Dargel
 
